--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,10 +1,10 @@
 file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true src/*.cpp)
 file(GLOB_RECURSE HEADERS LIST_DIRECTORIES true inc/*.h)
 
-add_executable(executable_name ${SOURCES})
-target_include_directories(executable_name PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
+add_executable(emulator ${SOURCES})
+target_include_directories(emulator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
 
 #target_link_libraries(executable_name PUBLIC common)
 
-install(TARGETS executable_name)
+install(TARGETS emulator)
